# KapexAI

./: .gitignore  AGENTS.md  Makefile  pyproject.toml
.opencode/commands/: pr-prep.md  start-work.md
backend/: main.py  pyproject.toml
docs/: working-instructions.md  working-with-uv.md
services/database/: pyproject.toml  schema.prisma
services/database/db_service/: __init__.py  client.py
services/database/migrations/20260722204609_test_migration/: migration.sql
services/database/migrations/20260722211314_basic_schema/: migration.sql
worker/: agent.py  main.py  pyproject.toml
