# ./worker/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "db-service",  # Linked workspace dependency
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-mistralai>=1.1.6",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "tavily-python>=0.7.26",
]

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.uv.sources]
db-service = { workspace = true }
